--- a/core/scss/components/card/_card--horizontal.scss
+++ b/core/scss/components/card/_card--horizontal.scss
@@ -10,8 +10,12 @@
   // One column on smallest screen sizes.
   @include grid-media("xs", 100%);
 
+  // 33/66 for small.
+  @include grid-media("sm", 1fr 3fr, modular-margin-get-value('sm'));
+
+
   // 50/50 side by side on all screen sizes above small.
-  @include grid-media("sm", 1fr 1fr, modular-margin-get-value('sm'));
+  @include grid-media("md", 1fr 1fr, modular-margin-get-value('sm'));
 
   // Modular padding on images too.
   > img {
